<resources>
  <string name="app_name">ZooMatch</string>
  <string name="title_activity_start">Начальная страница</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Пароль</string>
  <string name="prompt_username">Имя пользователя</string>
  <string name="firstname">Имя</string>
  <string name="lastname">Фамилия</string>
  <string name="action_sign_in">Войдите или зарегистрируйстесь</string>
  <string name="action_sign_in_short">Войти</string>
  <string name="welcome">Добро пожаловать!</string>
  <string name="invalid_email">Email недействителен</string>
  <string name="invalid_password">Пароль должен содержать больше 5 символов</string>
  <string name="invalid_username">Недействительное имя пользователя</string>
  <string name="login_failed">Ошибка входа</string>
  <string name="email_already_exists">Пользователь с таким email уже существует</string>
  <string name="form_state_login">Войти</string>
  <string name="form_state_sign_up">Регистрация</string>
  <string name="title_activity_home">Главная страница</string>
  <string name="title_home">Главная</string>
  <string name="title_search">Поиск</string>
  <string name="title_pets">Питомцы</string>
  <string name="title_profile">Профиль</string>
  <string name="title_settings">Настройки</string>
  <string name="recommendations">Рекомендации</string>
  <string name="your_activity">Ваша активность</string>
  <string name="day">День</string>
  <string name="week">Неделя</string>
  <string name="month">Месяц</string>
  <string name="your_matings">Ваши совпадения</string>
  <string name="your_rating">Ваш рейтинг</string>
  <string name="your_new_dialogs">Ваши новые диалоги</string>
  <string name="your_views">Ваши просмотры</string>
  <string name="your_match_dynamic">Ваша динамика мэтчей</string>
  <string name="find_by_name">Найти по имени</string>
  <string name="filter">Фильтр</string>
  <string name="edit_profile">Изменить профиль</string>
  <string name="app_settings">Настройки приложения</string>
  <string name="enable_push_notifications">Включить Push-уведомления</string>
  <string name="enable_email_notifications">Включить Email-уведомления</string>
  <string name="privacy_policy">Политика конфиденциальности</string>
  <string name="terms_of_use">Условия использования</string>
  <string name="account_settings">Настройки аккаунта</string>
  <string name="approve_profile">Подтверждение профиля</string>
  <string name="edit_password">Сменить пароль</string>
  <string name="logout">Выйти из аккаунта</string>
  <string name="delete_account">Удалить аккаунт</string>
  <string name="do_it">Перейти</string>
  <string name="pets_in_profile">Питомцев в профиле</string>
  <string name="successful_matings">Успешных случек</string>
  <string name="rating">Рейтинг</string>
  <string name="error_to_update_profile">Ошибка обновления профиля</string>
  <string name="invalid_name">Имя не может быть пустым</string>
  <string name="invalid_phone">Используйте формат +7XXXXXXXXXX</string>
  <string name="invalid_password2">Пароль слишком короткий или отличается</string>
  <string name="invalid_age">Неправильный возраст</string>
  <string name="old_password">Старый пароль</string>
  <string name="new_password">Новый пароль</string>
  <string name="confirm_password">Повторите пароль</string>
  <string name="cancel">Закрыть</string>
  <string name="change_password">Изменить пароль</string>
  <string name="name">Имя</string>
  <string name="location">Город</string>
  <string name="description">Описание</string>
  <string name="email" translatable="false">Email</string>
  <string name="phone_number">Номер телефона</string>
  <string name="save">Сохранить</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="invalid_type">Выберите вид животного</string>
  <string name="invalid_breed">Выберите породу животного</string>
  <string name="breed_requires_type">Сначала укажите вид животного</string>
  <string name="invalid_location">Укажите адрес</string>

  <string name="my_pets">Мои питомцы</string>
  <string name="pet_name">Кличка</string>
  <string name="search_by_name">Поиск по имени</string>
  <string name="grid">Сетка</string>
  <string name="list">Список</string>
  <string name="filters">Фильтры</string>
  <string name="add_pet">Добавить питомца</string>
  <string name="add_photo">Добавить фото</string>
  <string name="min_photo">Минимум 1 фото вашего любимца</string>
  <string name="pet_name_hint">Например, Арчи</string>
  <string name="animal_type">Вид животного</string>
  <string name="breed">Порода</string>
  <string name="gender">Пол</string>
  <string name="male">Мужской</string>
  <string name="female">Женский</string>
  <string name="birth_date">Дата рождения</string>
  <string name="weight_kg">Адрес</string>
  <string name="ready_for_mating">Готов к вязке</string>
  <string name="ready_for_mating_desc">Профиль будет виден в поиске партнеров</string>
  <string name="pet_description">Описание питомца</string>
  <string name="pet_description_hint">Расскажите о характере, достижениях или привычках вашего питомца…</string>
  <string name="save_profile">Сохранить профиль</string>
  <string name="new_pet">Новый питомец</string>
  <string name="in_active_search">В АКТИВНОМ ПОИСКЕ</string>
  <string name="not_searching">НЕ ИЩЕТ</string>
  <string name="hello_user">Привет, %s!</string>
  <string name="breeding_summary">Ваша сводка по разведению сегодня выглядит отлично. У вас %1$d активных совпадения и %2$d предстоящие проверки здоровья.</string>
  <string name="matches">Совпадения</string>
  <string name="rating_label">Рейтинг</string>
  <string name="new_chats">Новые чаты</string>
  <string name="views">Просмотры</string>
  <string name="recommended_actions">Рекомендуемые действия</string>
  <string name="inactive">Неактивен</string>
  <string name="pet_inactive_msg">%s давно не был в поиске! Пора найти ему идеальную пару.</string>
  <string name="boost_profile">Продвинуть профиль</string>
  <string name="match_dynamics">Динамика совпадений</string>
  <string name="week_growth">+%d%% к прошлой неделе</string>
  <string name="verified_breeder">Проверенный заводчик</string>
  <string name="successful_matings_count">Успешных вязок</string>
  <string name="breeder_rating">Рейтинг заводчика</string>
  <string name="based_on_reviews">На основе %d отзывов</string>
  <string name="positive_reviews">%d%% положительных</string>
  <string name="reviews_level">Уровень отзывов</string>
  <string name="responds_in">Отвечает в течение</string>
  <string name="avg_speed">Ср. скорость</string>
  <string name="hours">2 часов</string>
  <string name="reviews_count">Отзывы (%d)</string>
  <string name="all">Все</string>
  <string name="dispute">Оспорить</string>
  <string name="push_notifications_desc">Будьте в курсе активности питомцев</string>
  <string name="push_notifications">Пуш-уведомления</string>
  <string name="edit_profile_data">Редактировать данные профиля</string>
  <string name="logout_short">Выйти</string>
  <string name="delete_account_red">Удалить аккаунт</string>
  <string name="tab_chats">Чаты</string>
</resources>