<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@id/navigation_home">

  <fragment
    android:id="@+id/navigation_search"
    android:name="com.example.zoomatch.ui.homeScreen.search.MatchFragment"
    android:label="@string/title_search"
    tools:layout="@layout/home_fragment_match" />

  <fragment
    android:id="@+id/navigation_pets"
    android:name="com.example.zoomatch.ui.homeScreen.pets.PetsFragment"
    android:label="@string/title_pets"
    tools:layout="@layout/home_fragment_pets" />

  <fragment
    android:id="@+id/navigation_home"
    android:name="com.example.zoomatch.ui.homeScreen.home.HomeFragment"
    android:label="@string/title_home"
    tools:layout="@layout/home_fragment_home" />

  <fragment
    android:id="@+id/navigation_profile"
    android:name="com.example.zoomatch.ui.homeScreen.profile.ProfileFragment"
    android:label="@string/title_profile"
    tools:layout="@layout/home_fragment_profile" />

  <fragment
    android:id="@+id/navigation_chats"
    android:name="com.example.zoomatch.ui.homeScreen.chats.ChatsFragment"
    android:label="@string/tab_chats"
    tools:layout="@layout/fragment_chats" />

  <fragment
    android:id="@+id/messagesFragment"
    android:name="com.example.zoomatch.ui.homeScreen.chats.MessagesFragment"
    android:label="Сообщения"
    tools:layout="@layout/fragment_messages">

    <argument
      android:name="chatId"
      app:argType="string" />

    <argument
      android:name="interlocutorId"
      app:argType="integer" />

    <argument
      android:name="interlocutorName"
      app:argType="string"
      android:defaultValue="" />
  </fragment>

</navigation>