<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.homeScreen.settings.SettingsFragment">

  <TextView
    android:id="@+id/appSettingsText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="56dp"
    android:layout_marginTop="20dp"
    android:text="@string/app_settings"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/appSettingsCard"
    android:layout_width="0dp"
    android:layout_height="240dp"
    android:layout_marginStart="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="40dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appSettingsText">

    <LinearLayout
      android:id="@+id/appSettingsLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout
        android:id="@+id/pushNotificationsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
          android:id="@+id/ic_push"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginStart="8dp"
          android:src="@drawable/notification_svgrepo_com" />

        <TextView
          android:id="@+id/pushNotificationsText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:layout_weight="1"
          android:text="@string/enable_push_notifications" />

        <com.google.android.material.materialswitch.MaterialSwitch
          android:id="@+id/switchPush"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_weight="0" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/emailNotificationsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
          android:id="@+id/ic_email"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginStart="8dp"
          android:layout_weight="0"
          android:src="@drawable/email_svgrepo_com" />

        <TextView
          android:id="@+id/emailNotificationsText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:layout_weight="1"
          android:text="@string/enable_email_notifications" />

        <com.google.android.material.materialswitch.MaterialSwitch
          android:id="@+id/switchEmail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_weight="0" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/privacyPolicyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
          android:id="@+id/ic_privacy"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginStart="8dp"
          android:layout_weight="0"
          android:src="@drawable/policy_svgrepo_com" />

        <TextView
          android:id="@+id/privacyPolicy"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:layout_weight="1"
          android:text="@string/privacy_policy" />

        <ImageView
          android:id="@+id/ic_chevron_right_1"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginEnd="8dp"
          android:layout_weight="0"
          android:src="@android:drawable/ic_menu_edit" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/termsOfUseLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
          android:id="@+id/ic_terms"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginStart="8dp"
          android:layout_weight="0"
          android:src="@drawable/policy_svgrepo_com" />

        <TextView
          android:id="@+id/termsOfUse"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:layout_weight="1"
          android:text="@string/terms_of_use" />

        <ImageView
          android:id="@+id/ic_chevron_right_2"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginEnd="8dp"
          android:layout_weight="0"
          android:src="@android:drawable/ic_menu_edit" />
      </LinearLayout>

    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>

  <TextView
    android:id="@+id/accSettingsText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="56dp"
    android:layout_marginTop="40dp"
    android:text="@string/account_settings"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appSettingsCard" />

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/accSettingsCard"
    android:layout_width="0dp"
    android:layout_height="240dp"
    android:layout_marginStart="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="40dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/accSettingsText">

    <LinearLayout
      android:id="@+id/accSettingsLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout
        android:id="@+id/approveProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
          android:id="@+id/ic_approve"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginStart="8dp"
          android:layout_weight="0"
          android:src="@drawable/approve_svgrepo_com" />

        <TextView
          android:id="@+id/approveProfileText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:layout_weight="1"
          android:text="@string/approve_profile" />

        <ImageView
          android:id="@+id/ic_chevron_right_3"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginEnd="8dp"
          android:layout_weight="0"
          android:src="@android:drawable/ic_menu_edit" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/editPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
          android:id="@+id/ic_editPass"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginStart="8dp"
          android:layout_weight="0"
          android:src="@drawable/password_svgrepo_com" />

        <TextView
          android:id="@+id/editPasswordText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:layout_weight="1"
          android:text="@string/edit_password" />

        <ImageView
          android:id="@+id/ic_chevron_right_4"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginEnd="8dp"
          android:layout_weight="0"
          android:src="@android:drawable/ic_menu_edit" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/logOutLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
          android:id="@+id/ic_logout"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginStart="8dp"
          android:layout_weight="0"
          android:src="@drawable/logout_svgrepo_com" />

        <TextView
          android:id="@+id/logOutText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:text="@string/logout" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/deleteAccountLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
          android:id="@+id/ic_delete"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:layout_marginStart="8dp"
          android:layout_weight="0"
          android:src="@drawable/delete_svgrepo_com" />

        <TextView
          android:id="@+id/deleteAccountText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="8dp"
          android:text="@string/delete_account" />
      </LinearLayout>

    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>

  <TextView
    android:id="@+id/appVersionText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="40dp"
    android:text="Version: 0.0.1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>