<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">


  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/card_pets"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="4dp"
      android:layout_weight="1">

      <LinearLayout
        android:id="@+id/petsProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
          android:id="@+id/petsProfileText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/pets_in_profile"
          android:textColor="?android:textColorSecondary" />

        <TextView
          android:id="@+id/petsCountText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="0"
          android:textSize="32sp"
          android:textStyle="bold" />
      </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/card_success"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="4dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_weight="1">

      <LinearLayout
        android:id="@+id/matingsProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
          android:id="@+id/matingsProfileText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/successful_matings"
          android:textColor="?android:textColorSecondary" />

        <TextView
          android:id="@+id/matingsCountText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="~"
          android:textSize="32sp"
          android:textStyle="bold" />
      </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
  </LinearLayout>

  <!-- Карточка: Успешных вязок -->

  <!-- Рейтинг -->
  <com.google.android.material.card.MaterialCardView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/ratingProfileLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp">

      <TextView
        android:id="@+id/ratingProfileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/ratingCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  ~  "
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ratingDescText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ratingDescText" />

      <TextView
        android:id="@+id/ratingDescText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="lorem ipsum dolor sit amet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ratingCountText"
        app:layout_constraintTop_toBottomOf="@+id/ratingProfileText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>